# car-price-prediction

./: .env-example  .gitignore  README.md  config.yaml  evaluate.py  pyproject.toml  requirements.txt  train.py
configs/: config.yaml  preprocessing_config.yaml
configs/train/: cb.yaml  cb_config.yaml  linreg.yaml  linreg_config.yaml  ridge_config.yaml  sklearn.yaml  xgb.yaml  xgb_config.yaml
data/: features.json
data/preprocessed/: test.csv.dvc  train.csv.dvc
data/raw/: test.csv.dvc  train.csv.dvc
src/: __init__.py  callbacks.py  components.py  data_ingestion.py  data_validation.py  evaluator.py  features.py  hyperparameters.py  metrics.py  model.py  preprocessing.py  train_test_split.py  trainer.py  utils.py
src/base/: evaluator.py  registries.py  trainer.py  utils.py
src/data/: ingestion.py  preprocessing.py  splitting.py  train_test_split.py  validation.py
src/models/: boosting.py  ensemble.py  hyperparam_spaces.py  linear.py  tree.py
test/: test_preprocessing.py  test_utils.py
